Fix issues with new tile cards on IE10

--- a/static/src/styles/modules/_tile.scss
+++ b/static/src/styles/modules/_tile.scss
@@ -160,8 +160,6 @@
 }
 
 .tile__info {
-  flex: 1;
-
   &:not(:last-child) {
     margin-bottom: 1rem;
   }
